# Forespoergsler-til-Ejendomsbeskatningen

./: .gitignore  README.md  changelog.md  pyproject.toml
robot_framework/: config.py  process.py  reset.py
robot_framework/sub_process/: doc2archive_process.py  go_process.py  mail_process.py  sap_process.py  sqlite_process.py  structura_process.py
