[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_framework"
version = "1.4.0"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.*",
    "Pillow == 10.*",
    "itk_dev_shared_components == 2.*",
    "htpy==24.3.9",
    "requests_ntlm == 1.*",
    "pypdf == 6.*"
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]
